--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-type": "^16.5.3",
     "mime-db": "^1.51.0",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.4.1",
     "whatsapp-web.js": "^1.15.3",
