first test with dialogflow

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 SAVE_MEDIA=true
 PORT=3000
 DATABASE=none
-
-#DATABASE: none, mysql, mongo
+LANGUAGE=es
+#DATABASE: none, mysql, mongo, dialogflow
 SQL_HOST=
 SQL_USER=
 SQL_PASS=
