--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/dialogflow": "^4.6.0",
     "dotenv": "^11.0.0",
     "exceljs": "^4.3.0",
     "express": "^4.17.2",
@@ -18,6 +19,7 @@
     "mime-db": "^1.51.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "nanoid": "^3.1.32",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.4.1",
     "whatsapp-web.js": "^1.15.3",
