--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.32",
+    "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.4.1",
     "whatsapp-web.js": "^1.15.3",
