--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
+######DATABASE: none, mysql, mongo, dialogflow
+
 SAVE_MEDIA=true
 PORT=3000
 DATABASE=none
 LANGUAGE=es
-#DATABASE: none, mysql, mongo, dialogflow
 SQL_HOST=
 SQL_USER=
 SQL_PASS=
