--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/dialogflow": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "exceljs": "^4.3.0",
     "express": "^4.17.2",
