--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.4.1",
+    "stormdb": "^0.5.2",
     "whatsapp-web.js": "^1.16.4",
     "xlsx": "^0.16.9"
   },
