--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.4.1",
     "stormdb": "^0.5.2",
-    "whatsapp-web.js": "^1.16.4",
-    "xlsx": "^0.16.9"
+    "whatsapp-web.js": "^1.16.4"
   },
   "devDependencies": {
     "pm2": "^5.1.2",
