--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "workspaces":[
+    "packages/cli",
+    "packages/io",
+    "packages/providers"
+  ],
   "keywords": [
     "whatsapp",
     "bot-whatsapp",
