--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,6 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "kleur": "^4.1.5"
+    "cross-spawn": "^7.0.3",
+    "detect-package-manager": "^2.0.1",
+    "kleur": "^4.1.5",
+    "prompts": "^2.4.2",
+    "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "whatsapp-web.js": "^1.18.0"
   }
 }
