--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,5 +21,8 @@
         "kleur": "^4.1.5",
         "prompts": "^2.4.2",
         "rimraf": "^3.0.2"
+    },
+    "dependencies": {
+        "whatsapp-web.js": "^1.18.2"
     }
 }
