--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,9 +14,5 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "devDependencies": {},
-    "dependencies": {
-        "whatsapp-web.js": "^1.18.2"
-    }
+    "license": "ISC"
 }
