--- a/packages/io/package.json
+++ b/packages/io/package.json
@@ -11,6 +11,7 @@
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
         "lint:fix": "eslint --fix .",
+        "test:io": "node ../../node_modules/uvu/bin.js tests",
         "build:io": "npm run format:write && npm run lint:fix && npm run io:rollup"
     },
     "keywords": [],
