--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "cli": "node ./packages/cli/bin/cli.js",
         "cli:rollup": "rollup ./packages/cli/index.js --config ./packages/cli/rollup-cli.config.js",
-        "io:rollup": "rollup ./packages/io/index.js --config ./packages/io/rollup-cli.config.js"
+        "io:rollup": "rollup ./packages/io/index.js --config ./packages/io/rollup-cli.config.js",
+        "test:io": "node ./node_modules/uvu/bin.js ./packages/io/tests"
     },
     "workspaces": [
         "packages/cli",
