--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "uvu": "^0.5.6"
     },
     "engines": {
-        "node": "16.x"
+        "node": "16.x",
+        "npm": ">=6.0.0"
     }
 }
