--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,12 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm i
+            - run: |
+              if [ -e yarn.lock ]; then
+              yarn install --frozen-lockfile
+              elif [ -e package-lock.json ]; then
+              npm ci
+              else
+              npm i
             - run: npm run build --if-present
             - run: npm run test:io
