--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: |
+              run: |
               if [ -e yarn.lock ]; then
               yarn install --frozen-lockfile
               elif [ -e package-lock.json ]; then
