--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bot-core",
+    "name": "@bot-whatsapp/core",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
