--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@bot-whatsapp/io",
+    "name": "@bot-whatsapp/provider",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
