--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "test.coverage": "node ./node_modules/c8/bin/c8.js --check-coverage --lines=90 npm run test.unit",
         "test": "npm run test.unit && npm run test.e2e",
         "cli": "node ./packages/cli/bin/cli.js",
+        "dev:debug": "node --inspect ./example-app/app.js",
         "dev": "node ./example-app/app.js"
     },
     "workspaces": [
