--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,5 +9,8 @@
         "cross-spawn": "^7.0.3",
         "detect-package-manager": "^2.0.1",
         "kleur": "^4.1.5"
-    }
+    },
+    "files": [
+        "./lib/cli/bundle.cli.cjs"
+    ]
 }
