--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.2",
         "c8": "^7.12.0",
+        "cross-env": "^7.0.3",
         "eslint": "^8.26.0",
         "eslint-config-prettier": "^8.5.0",
         "prettier": "^2.7.1",
