--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@bot-whatsapp/core",
+    "name": "@bot-whatsapp/bot",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
@@ -11,8 +11,7 @@
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
         "lint:fix": "eslint --fix .",
-        "test.unit": "cross-env NODE_ENV=test node ../../node_modules/uvu/bin.js tests",
-        "build:core": "yarn run format:write && yarn run lint:fix && yarn run io:rollup"
+        "test.unit": "cross-env NODE_ENV=test node ../../node_modules/uvu/bin.js tests"
     },
     "keywords": [],
     "author": "",
