--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -8,7 +8,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@bot-whatsapp/core": "*",
+        "@bot-whatsapp/bot": "*",
         "qr-image": "^3.2.0"
     },
     "files": [
