--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -2,8 +2,11 @@
     "name": "@bot-whatsapp/provider",
     "version": "0.0.1",
     "description": "Esto es el conector a Twilio, Meta, etc...",
-    "main": "index.js",
+    "main": "./lib/bundle.provider.cjs",
     "private": true,
+    "scripts": {
+        "test.unit": "cross-env NODE_ENV=test node ../../node_modules/uvu/bin.js tests"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -12,6 +15,9 @@
         "qr-image": "^3.2.0"
     },
     "files": [
-        "./lib/provider/bundle.provider.cjs"
+        "./lib/bundle.provider.cjs",
+        "./mock/*",
+        "./twilio/*",
+        "./web-whatsapp/*"
     ]
 }
