--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "description": "Bot de wahtsapp open source para MVP o pequeños negocios",
     "main": "app.js",
     "private": true,
+    "type": "module",
     "scripts": {
-        "cli:rollup": "rollup ./packages/cli/index.js --config ./packages/cli/rollup-cli.config.js ",
-        "io:rollup": "rollup ./packages/io/index.js --config ./packages/io/rollup-cli.config.js",
-        "bot:rollup": "rollup ./packages/bot/index.js --config ./packages/bot/rollup-bot.config.js",
-        "provider:rollup": "rollup ./packages/provider/index.js --config ./packages/provider/rollup-provider.config.js",
+        "cli:rollup": "rollup --config ./packages/cli/rollup-cli.config.js ",
+        "bot:rollup": "rollup --config ./packages/bot/rollup-bot.config.js",
+        "provider:rollup": "rollup --config ./packages/provider/rollup-provider.config.js ",
         "database:rollup": "rollup ./packages/database/index.js --config ./packages/database/rollup-cli.config.js",
         "format:check": "prettier --check ./packages",
         "format:write": "prettier --write ./packages",
         "lint:check": "eslint ./packages",
         "lint:fix": "eslint --fix ./packages",
-        "build": "yarn run cli:rollup && yarn run io:rollup && yarn run core:rollup && yarn run provider:rollup && yarn run database:rollup",
+        "build": "yarn run cli:rollup && yarn run bot:rollup && yarn run provider:rollup && yarn run database:rollup",
         "link.dist": "",
         "test.unit": "node ./node_modules/uvu/bin.js packages test",
         "test.e2e": "node ./node_modules/uvu/bin.js __tests__ test",
