--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -2,7 +2,7 @@
     "name": "@bot-whatsapp/provider",
     "version": "0.0.1",
     "description": "Esto es el conector a Twilio, Meta, etc...",
-    "main": "./lib/bundle.provider.cjs",
+    "main": "./lib/bundle.mock.cjs",
     "private": true,
     "scripts": {
         "test.unit": "cross-env NODE_ENV=test node ../../node_modules/uvu/bin.js tests"
@@ -15,9 +15,6 @@
         "qr-image": "^3.2.0"
     },
     "files": [
-        "./lib/bundle.provider.cjs",
-        "./mock/*",
-        "./twilio/*",
-        "./web-whatsapp/*"
+        "./lib/*"
     ]
 }
