--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -23,6 +23,7 @@
     "license": "ISC",
     "devDependencies": {
         "@bot-whatsapp/cli": "*",
+        "@bot-whatsapp/provider": "*",
         "kleur": "^4.1.5"
     }
 }
