--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -23,7 +23,11 @@
     "license": "ISC",
     "devDependencies": {
         "@bot-whatsapp/cli": "*",
+        "@bot-whatsapp/database": "*",
         "@bot-whatsapp/provider": "*",
         "kleur": "^4.1.5"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.3"
     }
 }
