--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "link.dist": "cd packages/bot && npm link && cd ../provider && npm link && cd ../cli && npm link",
         "test.unit": "node ./node_modules/uvu/bin.js packages test",
         "test.e2e": "node ./node_modules/uvu/bin.js __tests__ test",
-        "test.coverage": "node ./node_modules/c8/bin/c8.js --check-coverage --lines=90 npm run test.unit",
-        "test": "npm run test.unit && npm run test.e2e",
+        "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit",
+        "test": "npm run test.coverage && npm run test.e2e",
         "cli": "node ./packages/cli/bin/cli.js",
         "dev:debug": "node --inspect ./example-app/app.js",
         "dev": "node ./example-app/app.js",
