--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,6 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: npm install
             - run: npm run build --if-present
-            - run: npm run test
+            - run: npm run test.unit
+            - run: npm run test.e2e
+            - run: npm run test.coverage
