--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.js",
     "private": true,
     "scripts": {
+        "commit": "git-cz",
         "cli:rollup": "rollup --config ./packages/cli/rollup-cli.config.js ",
         "bot:rollup": "rollup --config ./packages/bot/rollup-bot.config.js",
         "provider:rollup": "rollup --config ./packages/provider/rollup-provider.config.js ",
@@ -52,21 +53,28 @@
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-replace": "^5.0.1",
         "c8": "^7.12.0",
+        "commitizen": "^4.2.5",
         "cross-env": "^7.0.3",
+        "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.26.0",
         "eslint-config-prettier": "^8.5.0",
+        "husky": "^8.0.2",
         "prettier": "^2.7.1",
         "prompts": "^2.4.2",
         "rimraf": "^3.0.2",
         "rollup": "^3.2.3",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-copy": "^3.4.0",
-        "uvu": "^0.5.6",
-        "husky": "^8.0.2"
+        "uvu": "^0.5.6"
     },
     "packageManager": "yarn@3.2.0",
     "engines": {
         "node": ">=16"
     },
-    "author": "Leifer Mendez <leifer33@gmail.com>"
+    "author": "Leifer Mendez <leifer33@gmail.com>",
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    }
 }
