--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "commitizen": "^4.2.5",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "^3.3.0",
+        "cz-emoji": "^1.3.2-canary.2",
         "eslint": "^8.26.0",
         "eslint-config-prettier": "^8.5.0",
         "husky": "^8.0.2",
@@ -77,7 +78,7 @@
     "author": "Leifer Mendez <leifer33@gmail.com>",
     "config": {
         "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
+            "path": "cz-emoji"
         }
     }
 }
